# StockScouter

./: .gitignore  COMMIT_MESSAGE.txt  DEPLOYMENT_SUCCESS.md  F_DRIVE_SETUP.md  GUI_IMPLEMENTATION.md  GUI_README.md  GUI_V2_README.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION_SUCCESS.md  MIGRATION_V1_TO_V2.md  PLAN.md  PREVIEW_SYSTEM_PLAN.md  QUICKSTART_UV.md  README.md  START_GUI.ps1  START_GUI_V2.ps1  UI_POPULATION_COMPLETE.md  example_runner.py  pubspec.yaml  pyproject.toml  quick_start.py  run_gui.py  run_gui_v2.py  setup_uv.ps1  setup_uv.sh  test_data_sources.py
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/constants/: api_constants.dart  app_constants.dart  feature_flags.dart  theme_constants.dart
lib/models/: analytics_models.dart  analytics_models.freezed.dart  analytics_models.g.dart  crypto_model.dart  crypto_model.freezed.dart  financial_news_models.dart  financial_news_models.freezed.dart  financial_news_models.g.dart  news_article.dart  news_model.dart  news_model.freezed.dart  news_model.g.dart  options_flow_analysis.freezed.dart  options_flow_analysis.g.dart  price_point.dart  sentiment_analysis.dart  stock.dart  stock_model.dart  stock_model.freezed.dart  stock_model.g.dart  user_model.dart  user_model.freezed.dart  user_model.g.dart
lib/providers/: analytics_provider.dart  (+5 more)
scrapers/: DYNAMIC_SCRAPING_SUMMARY.md  README.md  api_server.py  api_server_v2.py  pipelines.py  requirements.txt  run_spiders.py  scrapy.cfg  settings.py  test_dynamic_scraping.py
test/: widget_test.dart
tests/: test_baseline.py  test_integration.py
(+117 files in other folders)
